--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="3.1.5" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.0.0" targetFramework="net45" />
@@ -8,7 +9,7 @@
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="4.0.0" targetFramework="net45" />
@@ -17,10 +18,10 @@
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net45" />
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="TelerikMvcExtensions" version="2012.2.607" targetFramework="net45" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
-  <package id="WebGrease" version="1.1.0" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
