--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -4,6 +4,7 @@
   <package id="Autofac" version="3.1.5" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.0.0" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.0.0" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.8.11" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
@@ -22,6 +23,5 @@
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="TelerikMvcExtensions" version="2012.2.607" targetFramework="net45" />
-  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
