--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -1,19 +1,61 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=152368
-  -->
+
 <configuration>
   <configSections>
     <section name="SmartStoreConfig" type="SmartStore.Core.Configuration.SmartStoreConfig, SmartStore.Core" requirePermission="false" />
-    <section name="dotless" type="dotless.Core.configuration.DotlessConfigurationSectionHandler, dotless.Core" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+
+    <sectionGroup name="bundleTransformer">
+      <section name="core" type="BundleTransformer.Core.Configuration.CoreSettings, BundleTransformer.Core" />
+      <section name="microsoftAjax" type="BundleTransformer.MicrosoftAjax.Configuration.MicrosoftAjaxSettings, BundleTransformer.MicrosoftAjax" />
+      <section name="less" type="BundleTransformer.Less.Configuration.LessSettings, BundleTransformer.Less" />
+    </sectionGroup>
+    <sectionGroup name="jsEngineSwitcher">
+      <section name="core" type="JavaScriptEngineSwitcher.Core.Configuration.CoreConfiguration, JavaScriptEngineSwitcher.Core" />
+      <section name="v8" type="JavaScriptEngineSwitcher.V8.Configuration.V8Configuration, JavaScriptEngineSwitcher.V8" />
+    </sectionGroup> 
   </configSections>
-  <dotless importAllFilesAsLess="true">
-    <!--<plugin name="Argb" assembly="SmartStore.Web.Framework" />-->
-  </dotless>
+
+  <bundleTransformer xmlns="http://tempuri.org/BundleTransformer.Configuration.xsd">
+    <core>
+      <css defaultMinifier="MicrosoftAjaxCssMinifier" usePreMinifiedFiles="true" disableNativeCssRelativePathTransformation="false">
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxCssMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxCssMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers>
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+          <add name="LessTranslator" type="BundleTransformer.Less.Translators.LessTranslator, BundleTransformer.Less" />
+        </translators> 
+      </css>
+      <js defaultMinifier="MicrosoftAjaxJsMinifier" usePreMinifiedFiles="true">
+        <minifiers>
+          <add name="NullMinifier" type="BundleTransformer.Core.Minifiers.NullMinifier, BundleTransformer.Core" />
+          <add name="MicrosoftAjaxJsMinifier" type="BundleTransformer.MicrosoftAjax.Minifiers.MicrosoftAjaxJsMinifier, BundleTransformer.MicrosoftAjax" />
+        </minifiers> 
+        <translators>
+          <add name="NullTranslator" type="BundleTransformer.Core.Translators.NullTranslator, BundleTransformer.Core" enabled="false" />
+        </translators>
+      </js>
+      <assetHandler disableServerCache="false" serverCacheDurationInMinutes="1440" disableClientCache="false" />
+    </core>
+    <microsoftAjax>
+      <css allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" colorNames="Strict" commentMode="Important" minifyExpressions="true" severity="0" />
+      <js allowEmbeddedAspNetBlocks="false" blocksStartOnSameLine="NewLine" ignoreAllErrors="false" ignoreErrorList="" indentSize="4" lineBreakThreshold="2147482647" outputMode="SingleLine" preprocessorDefineList="" termSemicolons="false" alwaysEscapeNonAscii="false" collapseToLiteral="true" constStatementsMozilla="false" debugLookupList="Debug,$Debug,WAssert,Msn.Debug,Web.Debug" errorIfNotInlineSafe="false" evalLiteralExpressions="true" evalTreatment="Ignore" ignoreConditionalCompilation="false" ignorePreprocessorDefines="false" inlineSafeStrings="true" knownGlobalNamesList="" localRenaming="CrunchAll" macSafariQuirks="true" manualRenamesProperties="true" noAutoRenameList="$super" preserveFunctionNames="false" preserveImportantComments="true" quoteObjectLiteralProperties="false" removeFunctionExpressionNames="true" removeUnneededCode="true" renamePairs="" reorderScopeDeclarations="true" strictMode="false" stripDebugStatements="true" severity="0" />
+    </microsoftAjax>
+    <less useNativeMinification="false" ieCompat="false" strictMath="false" strictUnits="false" dumpLineNumbers="None" javascriptEnabled="true">
+      <jsEngine name="V8JsEngine" />
+    </less>
+  </bundleTransformer>
+  <jsEngineSwitcher xmlns="http://tempuri.org/JavaScriptEngineSwitcher.Configuration.xsd">
+    <core>
+      <engines>
+        <add name="V8JsEngine" type="JavaScriptEngineSwitcher.V8.V8JsEngine, JavaScriptEngineSwitcher.V8" />
+      </engines>
+    </core>
+  </jsEngineSwitcher>
+  
   <SmartStoreConfig>
     <DynamicDiscovery Enabled="true" />
     <Engine Type="" />
@@ -85,14 +127,14 @@
     </pages>
     <httpRuntime targetFramework="4.5" maxRequestLength="1536000" executionTimeout="5400" maxQueryStringLength="16384" />
     <httpHandlers>
-      <add type="SmartStore.Web.Framework.Themes.EnhancedLessCssHttpHandler, SmartStore.Web.Framework" validate="false" path="*.less" verb="*" />
+      <add path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" />
     </httpHandlers>
   </system.web>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
-      <add name="dotless" path="*.less" verb="*" type="SmartStore.Web.Framework.Themes.EnhancedLessCssHttpHandler, SmartStore.Web.Framework" resourceType="File" preCondition="" />
+      <add name="LessAssetHandler" path="*.less" verb="GET" type="BundleTransformer.Less.HttpHandlers.LessAssetHandler, BundleTransformer.Less" resourceType="File" preCondition="" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_32bit" />
       <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
@@ -112,6 +154,13 @@
       <mimeMap fileExtension=".otf" mimeType="application/x-font-opentype" />
     </staticContent>
     <urlCompression doStaticCompression="false" doDynamicCompression="true" />
+    <security>
+      <requestFiltering>
+        <hiddenSegments>
+          <add segment="Noesis.Javascript" />
+        </hiddenSegments>
+      </requestFiltering>
+    </security>
   </system.webServer>
   <system.serviceModel>
     <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
