--- a/src/Presentation/SmartStore.Web/packages.config
+++ b/src/Presentation/SmartStore.Web/packages.config
@@ -1,13 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="51Degrees.mobi" version="2.1.15.1" targetFramework="net45" />
+  <package id="AjaxMin" version="5.2.5021.15814" targetFramework="net45" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
   <package id="Autofac" version="3.1.5" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.0.0" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.8.11" targetFramework="net45" />
+  <package id="BundleTransformer.Less" version="1.8.11" targetFramework="net45" />
+  <package id="BundleTransformer.MicrosoftAjax" version="1.8.11" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="FluentValidation.MVC4" version="5.0.0.1" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.Core" version="0.9.2" targetFramework="net45" />
+  <package id="JavaScriptEngineSwitcher.V8" version="0.9.2" targetFramework="net45" />
   <package id="jQuery" version="1.8.3" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.10.0" targetFramework="net45" />
   <package id="jquery-globalize" version="0.1.0" targetFramework="net45" />
@@ -26,6 +32,5 @@
   <package id="recaptcha" version="1.0.5.0" targetFramework="net45" />
   <package id="TelerikMvcExtensions" version="2012.2.607" targetFramework="net45" />
   <package id="underscore.js" version="1.4.0" targetFramework="net45" />
-  <package id="WebActivatorEx" version="2.0.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
