--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -445,7 +445,9 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
-    <None Include="Web References\EuropaCheckVatService\checkVatService.wsdl" />
+    <None Include="Web References\EuropaCheckVatService\checkVatService.wsdl">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Web References\EuropaCheckVatService\matchCode.datasource">
       <DependentUpon>Reference.map</DependentUpon>
     </None>
