HMAC authentication core routines

--- a/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
+++ b/src/Presentation/SmartStore.Web.Framework/SmartStore.Web.Framework.csproj
@@ -320,7 +320,7 @@
     <Compile Include="WebApi\Configuration\WebApiConfigurationPublisher.cs" />
     <Compile Include="WebApi\GenericApiController.cs" />
     <Compile Include="WebApi\OData\WebApiQueryableAttribute.cs" />
-    <Compile Include="WebApi\Security\WebApiPermissionProvider.cs" />
+    <Compile Include="WebApi\Security\HmacAuthentication.cs" />
     <Compile Include="WebApi\SmartStoreWebApiHttpControllerActivator.cs" />
     <Compile Include="WebApi\SmartStoreWebApiHttpControllerSelector.cs" />
     <Compile Include="WebApi\WebApiCaching.cs" />
