--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -8,11 +8,13 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
