--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -7,6 +7,7 @@
   <package id="BundleTransformer.Core" version="1.8.11" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.1" targetFramework="net45" />
+  <package id="fasterflect" version="2.1.0" targetFramework="net45" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
