--- a/src/Presentation/SmartStore.Web/Administration/sitemap.config
+++ b/src/Presentation/SmartStore.Web/Administration/sitemap.config
@@ -62,7 +62,7 @@
         <siteMapNode id="blog-posts" title="Blog posts" resKey="Admin.ContentManagement.Blog.BlogPosts" controller="Blog" action="List" area="Admin" />
         <siteMapNode id="blog-comments" title="Blog comments" resKey="Admin.ContentManagement.Blog.Comments" controller="Blog" action="Comments" area="Admin" />
       </siteMapNode>
-      <siteMapNode id="content-slider" title="Content slider" resKey="Admin.ContentManagement.ContentSlider" permissionNames="ContentSlider" controller="ContentSlider"  action="Index" area="Admin" />
+      <siteMapNode id="content-slider" title="Content slider" resKey="Admin.ContentManagement.ContentSlider" permissionNames="ManageContentSlider" controller="ContentSlider"  action="Index" area="Admin" />
       <siteMapNode id="forums" title="Manage forums" resKey="Admin.ContentManagement.Forums" permissionNames="ManageForums" controller="Forum" action="List" area="Admin" />
       <siteMapNode id="message-templates" title="Message templates" resKey="Admin.ContentManagement.MessageTemplates" permissionNames="ManageMessageTemplates" controller="MessageTemplate" action="List" area="Admin" />
       <siteMapNode id="polls" title="Polls" resKey="Admin.ContentManagement.Polls" permissionNames="ManagePolls" controller="Poll" action="List" area="Admin" />
