--- a/src/Presentation/SmartStore.Web.Framework/packages.config
+++ b/src/Presentation/SmartStore.Web.Framework/packages.config
@@ -16,6 +16,7 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net45" />
   <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net45" />
