--- a/src/Plugins/ExternalAuth.OpenId/packages.config
+++ b/src/Plugins/ExternalAuth.OpenId/packages.config
@@ -8,6 +8,8 @@
   <package id="Microsoft.AspNet.Mvc" version="5.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.0.0" targetFramework="net45" />
-  <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.6" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.13" targetFramework="net45" />
+  <package id="Microsoft.Net.Http" version="2.2.18" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
 </packages>
